--- a/interactive-rating/src/index.css
+++ b/interactive-rating/src/index.css
@@ -31,11 +31,11 @@ h1 {
 }
 
 .card {
-  padding: 1.5rem;
+  padding: 1.8rem;
   border-radius: 10%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   gap: 20px;
   width: 23rem;
@@ -45,7 +45,7 @@ h1 {
 }
 
 .text {
-  margin: 0 1.5rem;
+  margin: 0 1.2rem;
   color: var(--light-grey);
 }
 
@@ -90,7 +90,7 @@ h1 {
   font-size: 1rem;
   justify-self: flex-end;
   text-transform: uppercase;
-  padding: 0.8rem 8.5rem;
+  padding: 0.9rem 8.5rem;
   border: none;
   border-radius: 200px;
 }
@@ -129,4 +129,47 @@ h1 {
 
 .final-text {
   color: var(--light-grey);
+}
+
+@media (max-width: 500px) {
+  h1 {
+    letter-spacing: 0.1rem;
+    font-size: 1.4rem;
+    margin: 0;
+  }
+
+  .text {
+    margin: 0 0.7rem;
+  }
+
+  p {
+    font-size: 0.8rem;
+  }
+
+  .card {
+    padding: 1.2rem;
+    border-radius: 6%;
+    width: 18rem;
+    height: 20rem;
+  }
+
+  .rating-container {
+    gap: 0.8rem;
+  }
+
+  .submit-btn {
+    font-size: 0.8rem;
+    padding: 0.9rem 6.8rem;
+  }
+
+  .circle {
+    font-size: 0.9rem;
+    width: 2.8rem;
+    height: 2.8rem;
+  }
+
+  .star {
+    margin-left: 0;
+    padding: 1rem;
+  }
 }
