--- a/advice-generator/src/index.css
+++ b/advice-generator/src/index.css
@@ -30,7 +30,7 @@ body {
 }
 
 .card {
-  padding: 2rem;
+  padding: 2.5rem 2rem 2rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -38,7 +38,7 @@ body {
   gap: 10px;
   width: 28rem;
   max-height: 16rem;
-  border-radius: 3%;
+  border-radius: 4%;
   background-color: var(--gray);
   box-shadow: 0 2em 2em rgba(0, 0, 0, 0.1);
 }
@@ -48,8 +48,8 @@ body {
   color: var(--green);
   font-weight: bold;
   text-transform: uppercase;
-  letter-spacing: 0.15rem;
-  font-size: 0.7rem;
+  letter-spacing: 0.2rem;
+  font-size: 0.8rem;
 }
 
 .advice-section {
@@ -60,22 +60,46 @@ body {
 }
 
 .advice {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
+  margin: 0.1rem;
 }
 
 .divider {
+  content: url("./pattern-divider-desktop.svg");
   margin: 1.5rem;
 }
 
 .dice-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
   background-color: var(--green);
-  box-sizing: content-box;
-  border-radius: 50px;
+  border-radius: 50%;
   border: none;
-  padding: 20px;
+  padding: 2rem;
   cursor: pointer;
 }
 
 .dice-btn:hover {
   box-shadow: 2px 2px 30px var(--light-green);
+}
+
+@media (max-width: 530px) {
+  .card {
+    width: 18rem;
+  }
+
+  .advice {
+    font-size: 1.5rem;
+  }
+
+  .advice-number {
+    font-size: 0.7rem;
+  }
+
+  .divider {
+    content: url("./pattern-divider-mobile.svg");
+  }
 }
