--- a/advice-generator/src/index.css
+++ b/advice-generator/src/index.css
@@ -65,7 +65,6 @@ body {
 }
 
 .divider {
-  content: url("../public/pattern-divider-desktop.svg");
   margin: 1.5rem;
 }
 
@@ -100,6 +99,6 @@ body {
   }
 
   .divider {
-    content: url("../public/pattern-divider-mobile.svg");
+    content: url("/pattern-divider-mobile.svg");
   }
 }
